# gsh

./: .travis.yml  Cargo.toml  README.md  a.txt
docs/: book.toml
docs/src/: SUMMARY.md  builtin.md  index.md  interactive.md  syntax.md
src/: cmd.rs  main.rs  parse.rs  prompt.rs  raw.rs  session.rs  shell.rs  sighook.rs
src/cmd/: kind.rs  mod.rs  redirect.rs
src/command/: builtin.rs  external.rs  mod.rs
src/eval/: block.rs  mod.rs
src/eval/command/: builtin.rs  external.rs  mod.rs  redirect.rs
src/eval/namespace/: mod.rs  procs.rs  vars.rs
src/evaluate/: mod.rs
src/evaluate/command/: builtin.rs  external.rs  mod.rs  redirect.rs
src/exec/: flow.rs  mod.rs
src/exec/command/: builtin.rs  external.rs  mod.rs
src/job/: jobs.rs  mod.rs  pid.rs  process.rs  status.rs
src/jobs/: cur_pid.rs  mod.rs  pid.rs  status.rs
src/parse/: block.rs  chars.rs  command.rs  flow.rs  line.rs  mod.rs  redirect.rs  string.rs
src/prompt/: mod.rs  readline.rs  sighook.rs
src/redirect/: file.rs  in_.rs  kind.rs  mod.rs  out.rs  output.rs
src/session/: io.rs  mod.rs  prompt.rs  vars.rs
src/shell/: builtin.rs  mod.rs  parse.rs  redirect.rs
