[package]
name = "gsh"
version = "0.0.1"
description = "An interactive shell from The Gravel Project."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/gravel-shell/gsh"
keywords = ["cli", "shell"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
anyhow = "1.0"
unindent = "0.1"
combine = "4.5"
either = "1.6"
nix = "0.19"
rustyline = "7.1"
signal-hook = "0.3"
