[package]
name = "tish"
version = "0.0.1"
description = "Typed Interactive SHell"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/tish"
keywords = ["cli", "shell", "typed"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
anyhow = "1.0"
unindent = "0.1"
combine = "4.5"
nix = "0.20"
rustyline = "8.0"
signal-hook = "0.3"
